# mlops-realtime-data-ingestion

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cdk.json  package-lock.json  package.json  tsconfig.json
doc/: DELETION.md  DEPLOY.md  DEPLOYMENT.md  INGESTION.md  List of User stories.md  MLOPS.md
lib/: codestar-connection.ts  data-ingestion-stack.ts  dynamodb.ts  fargate-worker.ts  git-branch.ts  ingestion-worker-image.ts  lambda.ts  parameters.ts  pipeline-stack.ts  pipeline-stage.ts
lib/common/: common-stack.ts
lib/ingestion/: codestar-connection.ts  dashboard.ts  data-ingestion-stack.ts  dynamodb.ts  fargate-worker.ts  ingestion-worker-image.ts
lib/sagemaker/: cleanup-project.ts  dashboard.ts  feature-store.ts  sagemaker-cleanup.ts  sagemaker-domain.ts  sagemaker-project.ts  sagemaker-stack.ts  sagemaker-users.ts  sagemaker.ts  start-kinesis.ts
lib/sagemaker-cleanup/: cleanup-stack.ts  sagemaker-cleanup.ts
resources/flink/: main.py
resources/glue/: FeatureStoreAggregateParquet.py
resources/kinesis/: analytics.sql  analytics_tumbling.sql
resources/lambdas/analytics_to_featurestore/: main.py
resources/lambdas/analytics_to_featurestore/layer/: pyproject.toml
resources/lambdas/check_sagemaker_domain/: main.py
resources/lambdas/cleanup_ecr/: main.py
resources/lambdas/cleanup_sagemaker/: main.py
resources/lambdas/cleanup_sagemaker_domain/: main.py
resources/lambdas/cleanup_sagemaker_experiments/: main.py
resources/lambdas/cleanup_sagemaker_models/: main.py
resources/lambdas/cleanup_sagemaker_models/layer/: pyproject.toml
resources/lambdas/cleanup_sagemaker_pipelines/: main.py
resources/lambdas/cleanup_sagemaker_project_bucket/: main.py
resources/lambdas/cleanup_sagemaker_response/: main.py
resources/lambdas/cleanup_sagemaker_status/: main.py
resources/lambdas/cleanup_sagemaker_studio/: main.py
resources/lambdas/cleanup_sagemaker_trials/: main.py
resources/lambdas/cleanup_sagemaker_trials/layer/: pyproject.toml
resources/lambdas/cleanup_sagemaker_trigger/: main.py
resources/lambdas/cleanup_sagemaker_user/: main.py
resources/lambdas/cleanup_ssm_parameters/: main.py
resources/lambdas/custom_resource_layer/: pyproject.toml
resources/lambdas/delivery_stream_to_featurestore/: main.py
resources/lambdas/filter_duplicates/: main.py
resources/lambdas/get_connection/: main.py
resources/lambdas/sagemaker_domain/: main.py
resources/lambdas/sagemaker_project/: main.py
resources/lambdas/service_catalog_roles/: main.py  servicecatalog_products_userole.json
resources/lambdas/start_flink_app/: main.py
resources/lambdas/start_kinesis_app/: main.py
resources/lambdas/stream_processing/: main.py
resources/lambdas/stream_processing/layer/: pyproject.toml
resources/sagemaker/: agg-fg-schema.json  create-model.ipynb  model-creation-and-testing.ipynb  model-hypertunning.ipynb  read_feature_store.ipynb
resources/sagemaker/featurestore/: agg-fg-schema.json  source-schema.json
resources/sagemaker/notebooks/: model-creation-and-testing.ipynb  model-hypertunning.ipynb  read_feature_store.ipynb  utils.py
test/: data-ingestion.test.ts
(+54 files in other folders)
