[tool.poetry]
name = "custom-resource-layer"
version = "0.1.0"
description = ""
authors = ["Raphael Eymann <raphael.eymann@amanox.ch>"]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.52"
crhelper = "^2.0.11"
aws-lambda-powertools = "^2.34.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
