[tool.poetry]
name = "custom-resource-layer"
version = "0.1.0"
description = ""
authors = ["Raphael Eymann <raphael.eymann@amanox.ch>"]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.36.15"
crhelper = "^2.0.12"
aws-lambda-powertools = "^3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
